handlers: add new handler for testing kafka brokers, also change in all handlers that sends email(deligated it to notification service) docker-compose: add docker compose for testing locally swag: debug some docs notification-service: add consumers for dummy messages (to lazy to work on dedicated branch)
